# pyside6-qt

./: .gitignore  README.md  pyproject.toml  requirements-docs.txt  requirements.txt
.github/workflows/: pages.yml
_resources/: resources.qrc  resources.qrc.bkp
_resources/i18n/: br.com.justcode.PySide6_en_US.ts
_scripts/: _tools.py  build_docs.py  create_venv.py  export_requirements.py  freedesktop_icons.py  install_requirements_venv.py  make_desktop_entry.py
docs/data/: CNAME
docs/source/: conf.py  contribute.rst  freedesktop.rst  index.rst  widgets.rst
src/drag-and-drop/: MainWindow.py
src/qcalendarwidget/: MainWindow.py
src/qcheckbox/: MainWindow.py
src/qcombobox/: MainWindow.py
src/qdatetimeedit/: MainWindow.py
src/qdial/: MainWindow.py
src/qfiledialog-file/: MainWindow.py
src/qfiledialog-folder/: MainWindow.py
src/qfiledialog-save/: MainWindow.py
src/qformlayout/: MainWindow.py
src/qhboxlayout/: MainWindow.py
src/qlabel/: MainWindow.py
src/qlcdnumber/: MainWindow.py
src/qlistview/: MainWindow.py
src/qlistwidget/: MainWindow.py
src/qlocale/: MainWindow.py
src/qmainwindow/: MainWindow.py
src/qmenubar/: MainWindow.py
src/qprogressbar-qthread/: MainWindow.py
src/qpushbutton/: MainWindow.py
src/qradiobutton/: MainWindow.py
src/qscrollarea/: MainWindow.py
src/qscrollbar/: MainWindow.py
src/qslider/: MainWindow.py
src/qstackedlayout/: MainWindow.py
src/qstackedwidget/: MainWindow.py
src/qstatusbar/: MainWindow.py
src/qtablewidget/: MainWindow.py
src/qtabwidget/: MainWindow.py
src/qtcharts/: MainWindow.py
(+12 files in other folders)
