[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Renato Cruz", email = "natorsc@gmail.com"},
]
dependencies = [
    "pyside6>=6.6.0",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
docs = [
    "sphinx>=7.2.6",
    "sphinx-copybutton>=0.5.2",
    "sphinx-inline-tabs>=2023.4.21",
    "sphinx-intl>=2.1.0",
    "sphinxext-opengraph>=0.9.0",
    "sphinx-sitemap>=2.5.1",
    "furo>=2023.9.10",
]
[tool.pdm.dev-dependencies]
dev = [
    "pylint>=3.0.2",
    "autopep8>=2.0.4",
]
